[package]
name = "ws2812-timer-delay"
version = "0.3.0"
authors = ["David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["smart-leds", "ws2812"]
description = "Timer-based driver for ws2812 leds"
documentation = "https://docs.rs/crate/ws2812-timer-delay"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smart-leds-rs/ws2812-timer-delay-rs"

[dependencies]
nb = "1.1.0"
smart-leds-trait = "0.3"
embedded-hal = "0.2.7"

[features]
slow = []
defmt = ["nb/defmt-0-3"]
